<resources>
    <string name="app_name">Motometer</string>
    <string name="my_cars_button">My cars</string>
    <string name="sign_out_button">Sign out</string>
    <string name="title_activity_home">Motometer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_profile_title">My profile</string>
    <string name="nav_cars_title">Garage</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_actions_title">Actions</string>
    <string name="nav_share_title">Share</string>
    <string name="nav_feedback_title">Feedback</string>
    <string name="nav_about_title">About</string>
    <string name="nav_sign_out_title">Sign out</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="bought_date">Bought date</string>
    <string name="built_year">Built year</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="registration_number">Registration number</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="title_activity_garage">Garage</string>
    <string name="empty_garage">You don\'t have any vehicle yet.</string>
    <string name="add_vehicle_button">Click here to add a new vehicle</string>
    <string name="new_record_service_title">Enter service expenses</string>
    <string name="new_record_fuel_title">Type refill expenses</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="zero">0</string>
    <string name="mileage">Mileage</string>
    <string name="comment">Comment</string>
    <string name="total_amount">Total amount</string>
    <string name="fill_amount">Fill amount</string>
    <string name="fuel_price">Fuel price</string>
    <string name="petrol_station">Petrol station</string>
    <string name="fuel">Fuel</string>
    <string name="service">Service</string>
    <string name="vehicle_choice">Select vehicle for record</string>
    <string-array name="vehicle_type">
        <item>Car</item>
        <item>Motorbike</item>
        <item>Truck</item>
    </string-array>
</resources>
