<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.NewRecordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fuel_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_record_service_title"
            android:textAlignment="center"
            android:textSize="@dimen/record_service_title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/service_date_label"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/service_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:text="2018-11-03" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/petrol_station_name_label"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="wrap_content"
                android:text="@string/petrol_station" />

            <EditText
                android:id="@+id/petrol_station_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fuel_price_label"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="wrap_content"
                android:text="@string/fuel_price" />

            <EditText
                android:id="@+id/fuel_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fuel_refilled_label"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="wrap_content"
                android:text="@string/fill_amount" />

            <EditText
                android:id="@+id/fuel_refilled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fuel_total_amount_label"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="wrap_content"
                android:text="@string/total_amount" />

            <EditText
                android:id="@+id/fuel_total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/service_odometer_label"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="wrap_content"
                android:text="@string/mileage" />

            <EditText
                android:id="@+id/service_odometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="120000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/service_comment_label"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="wrap_content"
                android:text="@string/comment" />

            <EditText
                android:id="@+id/service_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include layout="@layout/control_buttons" />

    </LinearLayout>

</FrameLayout>