<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.garage.VehicleDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingLeft="@dimen/list_item_spacing"
        android:paddingTop="@dimen/list_item_spacing_half"
        android:paddingRight="@dimen/list_item_spacing"
        android:paddingBottom="@dimen/list_item_spacing_half"
        android:textAppearance="@style/TextAppearance.AppCompat.Large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent"
                android:text="@string/vehicle_type" />
            <TextView
                android:id="@+id/details_type"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent"
                android:text="@string/manufacturer" />

            <TextView
                android:id="@+id/details_manufacturer"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent"
                android:text="@string/model" />
            <TextView
                android:id="@+id/details_model"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent"
                android:text="@string/built_year" />
            <TextView
                android:id="@+id/details_built_year"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent"
                android:text="@string/vin_code" />
            <TextView
                android:id="@+id/details_vin_code"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent"
                android:text="@string/bought_date" />
            <TextView
                android:id="@+id/details_bought_date"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent"
                android:text="@string/price" />
            <TextView
                android:id="@+id/details_price"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/details_currency"
                android:layout_width="@dimen/new_vehicle_edit_label"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>